www/css/events.css
h2 a, h4 a {
	color: black;
	text-decoration: none;
}
h2 a:hover, h4 a:hover {
	text-decoration: underline;
}
h2 em {
	display: inline-block;
	color: gray;
	font-size: .5em;
	line-height: 2em;
	float: left;
	margin-right: 1em;
	border: .1em solid gray;
	padding: 0 1em;
	border-radius: .25em;
	font-style: normal;
}
h2 strong em {
	background: #084;
	border-color: #084;
	color: white;
}
h2 img {
	float: right;
	max-width: 10em;
	border: .1em solid white;
	border-radius: 0.1em;
	box-shadow: 0 2px 2px gray;
	margin-left: 1em;
	clear: right;
	margin-bottom: 0.8em;
	clear: left;
}
h4 {
	margin-top: 0;
	margin-bottom: -0.6em;
}


h2 + .subtext {
	margin: -1.5em 0 1em 0;
}
p + .subtext {
	margin: -0.5em 0 1em 0;
}
.subtext {
	padding: 0;
	list-style: none;
	clear: left;
}
.subtext li {
	display: inline;
	margin-right: 3em;
	font-size: .7em;
	color: gray;
}
.subtext li a, .subtext li strong {
	color: black;
	font-size: 1.2em;
	font-weight: normal;
}

.events:before {
	height: 1px;
	width: 100%;
	display: block;
	content: " ";
	background-image: -webkit-linear-gradient(left, transparent, rgba(0,0,0,.1), transparent);
	background-image: -moz-linear-gradient(left, transparent, rgba(0,0,0,.1), transparent);
	background-image: -o-linear-gradient(left, transparent, rgba(0,0,0,.1), transparent);
	margin: 0;
	padding: 0;
	border: 0;
}
.events {
	margin-top: -1.5em;
	margin-left: 0.3em;
	margin-bottom: 2em;
	list-style: none;
	padding: 0;
}
.events >li {
	padding-left: 0.5em;
	border-left: 4px solid #35a;
	margin-top: 0.9em;
}

.events li p {
	text-align: left;
	line-height: 1.5em;
}

.events .subtext {
	margin-bottom: 0;
}
.events li h4 +.subtext {
	margin-top: 1em;
}

@media screen and (min-width: 50rem) {
	article:first-child h2 img {
		max-width: 12em;
	}
}
@media screen and (max-width: 50rem) {
	h2 {
		text-align: center;
		position: relative;
		border-bottom-left-radius: 0.3em;
		border-bottom-right-radius: 0.3em;
		max-height: 30vh;
		overflow-y: hidden;
	}
	h2 em {
		display: block;
		top:0;
		left: 0;
		position: absolute;
		
	}
	h2 img {
		border: none;
		box-shadow: none;
		border-radius: 0.3em;
		float: none;
		margin: 0;
		max-width: none;
		width: 100%;
	}
	.subtext {
		margin-top: -1em !important;
	}
}

